@@ -1,3 +1,12 @@
+July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Flaming sword added
+
+July 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Added special flame effect to bitmaps
+	* Added flames to bananas ;)
+
 July 24 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Single weapon skill's LevelDownMessage is now printed correctly when the item is
